# fra502-ros-project

gh_control/: CMakeLists.txt  package.xml
gh_control/config/: gh_control.yaml
gh_control/launch/: gh_control.launch
gh_description/: CMakeLists.txt  package.xml
gh_description/launch/: display.launch
gh_description/urdf/: gh_robot.gazebo  gh_robot.xacro
gh_gazebo/: CMakeLists.txt  package.xml
gh_gazebo/launch/: gazebo_ros.launch
gh_gazebo/world/greenhouse/: greenhouse.world  model.config  model.sdf
gh_vision/: CMakeLists.txt  package.xml
gh_vision/scripts/: color_detection.py  color_detection_ros.py
